# AI-seedling-robot

./: .gitignore  README.md
src/: README.md
src/base_velocity_smoother/: CMakeLists.txt  package.xml
src/base_velocity_smoother/cfg/: param.cfg
src/base_velocity_smoother/include/base_velocity_smoother/: velocity_smoother.h
src/base_velocity_smoother/launch/: base_velocity_smoother.launch
src/base_velocity_smoother/param/: config.yaml
src/base_velocity_smoother/src/: base_velocity_smoother_node.cpp  velocity_smoother.cpp
src/big_plant/: model.sdf
src/big_plant/mesh/: big_plant30.stl  long.stl  long1.stl  short.stl  short1.stl  short_2.stl
src/fake_localization/src/: fake_localization.cpp
src/points_map_loader/: CMakeLists.txt  package.xml
src/points_map_loader/launch/: points_map_loader.launch
src/points_map_loader/src/: points_map_loader.cpp
src/robot_localization/src/: navsat_transform.cpp
src/scout_ros/: .gitignore  README.md
src/scout_ros/scout_base/src/: scout_messenger.cpp
src/scout_ros/scout_gazebo_sim/: test.world
src/scout_ros/scout_ndt_localizer/: CMakeLists.txt  package.xml  test.pcd
src/visual-crop-row-navigation/include/: agribot_types.h  agribot_vs.h  agribot_vs_nodehandler.h
src/visual-crop-row-navigation/launch/: camera_umd.launch  visualservoing.launch
src/visual-crop-row-navigation/params/: agribot_vs_run.yaml
src/visual-crop-row-navigation/src/: agribot_vs.cpp  agribot_vs_node.cpp  agribot_vs_nodehandler.cpp
src/wall_vineyard/: model.config  model.sdf
src/wall_vineyard/meshes/: wall_vineyard.stl
(+45 files in other folders)
